# drf-auth

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
blogAPI/: settings.py  urls.py
patientRegisteration/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
patientRegisteration/migrations/: 0001_initial.py  0002_auto_20210727_2354.py
