[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["amarh-ayman <amarhbishtawi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Django = "^3.2.5"
djangorestframework = "^3.12.4"
psycopg2 = "^2.9.1"
djangorestframework-simplejwt = "^4.7.2"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
Django = "^3.2.5"
block = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
